# nx-firewall

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  README.md  gh-build.sh  kcm_nomadFirewall.desktop  travis-build.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  RuleEdit.qml  RuleListItem.qml  RulesView.qml  main.cpp  main.qml  nomad-firewall.desktop  qml.qrc
debian/: README.Debian  README.source  changelog  control  copyright
kcm/: CMakeLists.txt  nomadfirewallkcm.cpp  org.nxos.firewall.desktop  org_nxos_firewall.desktop  version.h.cmake
kcm/package/: metadata.desktop
kcm/package/contents/ui/: ConnectionItemDelegate.qml  ConnectionsView.qml  DynamicFirewallRules.qml  GlobalRules.qml  IpV4TextField.qml  IpV6TextField.qml  LogItemDelegate.qml  LogsView.qml  PortTextField.qml  RuleEdit.qml  RuleListItem.qml  RulesView.qml  main.qml
lib/: CMakeLists.txt  nomadfirewallkcm.cpp  nomadfirewallkcm.h
package/: metadata.desktop
package/contents/ui/: ViewAppNetworkAccess.qml  ViewRules.qml  main.qml
plugins/: CMakeLists.txt  ufwplugin.cpp
plugins/netstat/: CMakeLists.txt  conectionsmodel.cpp  conectionsmodel.h  netstatclient.cpp  netstatclient.h  netstatplugin.cpp  netstatplugin.h  qmldir
plugins/netstat/helper/: CMakeLists.txt  netstat_helper_config.h.cmake  netstathelper.cpp  netstathelper.h  org.kde.netstat.service.cmake  org.nomad.netstat.actions  org.nxos.netstat.actions
plugins/ufw/: CMakeLists.txt  appprofiles.cpp  appprofiles.h  blocker.cpp  blocker.h  loglistmodel.cpp  loglistmodel.h  profile.cpp  profile.h  qmldir  rule.cpp  rule.h  rulelistmodel.cpp  rulelistmodel.h  rulewrapper.cpp  rulewrapper.h  types.cpp  types.h  ufwclient.cpp  ufwclient.h  ufwplugin.cpp  ufwplugin.h
plugins/ufw/helper/: CMakeLists.txt  defaults  helper.cpp  helper.h  kcm_ufw_helper.py.cmake  org.kde.ufw.service.cmake  org.nomad.ufw.actions  ufw_helper_config.h.cmake
